force-app/main/default/objects/Scheme_Slab__c/Scheme_Slab__c.object-meta.xml
<CustomObject>
    <label>Scheme Slab</label>
    <nameField>
        <label>Scheme Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheme Slabs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>