force-app/main/default/objects/Scheme_Slab__c/fields/Benefit_Amount_Per_EA__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Amount_Per_EA__c</fullName>
    <label>Benefit Amount Per EA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>