force-app/main/default/objects/Scheme_Slab__c/fields/Benefit_Percent__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Percent__c</fullName>
    <label>Benefit Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>