force-app/main/default/objects/Scheme_Slab__c/fields/FOC_Product__c.field-meta.xml
<CustomField>
    <fullName>FOC_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FOC Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Scheme Slabs</relationshipLabel>
    <relationshipName>Scheme_Slabs</relationshipName>
    <type>Lookup</type>
</CustomField>