force-app/main/default/objects/Scheme_Slab__c/fields/Free_Qty__c.field-meta.xml
<CustomField>
    <fullName>Free_Qty__c</fullName>
    <label>Free Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>