force-app/main/default/objects/Scheme_Slab__c/fields/Qualifying_Qty_Min__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Qty_Min__c</fullName>
    <label>Qualifying Qty Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>