force-app/main/default/objects/Scheme_Slab__c/fields/Qualifying_Value_Max__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Value_Max__c</fullName>
    <label>Qualifying Value Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>