force-app/main/default/objects/Scheme_Slab__c/fields/Slab_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Slab_Sequence__c</fullName>
    <label>Slab Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>